// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaunchPage does not render mission patch when there is no mission patch 1`] = `
<div>
  <div
    className="headline"
  >
    <WithStyles(Typography)
      className="missionName"
      variant="h4"
    >
      Test
    </WithStyles(Typography)>
  </div>
  <WithStyles(Typography)
    className="date"
    variant="subtitle1"
  >
    <LaunchDateTime
      isTentative={false}
      utcDate={
        Object {
          "getDate": [MockFunction],
          "getFullYear": [MockFunction],
          "getMonth": [MockFunction],
          "toUTCString": [MockFunction],
        }
      }
    />
  </WithStyles(Typography)>
  <div
    className="status"
  >
    <WithStyles(LaunchStatus)
      isFailed={false}
      isInProgress={false}
      isSuccessful={true}
      isUpcoming={false}
    />
  </div>
  <WithStyles(Typography)>
    Details
  </WithStyles(Typography)>
</div>
`;

exports[`LaunchPage renders 1`] = `
<div>
  <div
    className="headline"
  >
    <img
      alt="Test"
      className="missionPatch"
      src="missionPatch"
    />
    <WithStyles(Typography)
      className="missionName"
      variant="h4"
    >
      Test
    </WithStyles(Typography)>
  </div>
  <WithStyles(Typography)
    className="date"
    variant="subtitle1"
  >
    <LaunchDateTime
      isTentative={false}
      utcDate={
        Object {
          "getDate": [MockFunction],
          "getFullYear": [MockFunction],
          "getMonth": [MockFunction],
          "toUTCString": [MockFunction],
        }
      }
    />
  </WithStyles(Typography)>
  <div
    className="status"
  >
    <WithStyles(LaunchStatus)
      isFailed={false}
      isInProgress={false}
      isSuccessful={true}
      isUpcoming={false}
    />
  </div>
  <WithStyles(Typography)>
    Details
  </WithStyles(Typography)>
</div>
`;

exports[`LaunchPage renders a loader when is loading a launch 1`] = `<WithStyles(Loader) />`;

exports[`LaunchPage renders error message when there is an error 1`] = `
<WithStyles(Typography)>
  Not Found
</WithStyles(Typography)>
`;

exports[`LaunchPage renders redirect to home page when launch is tentative 1`] = `
<Redirect
  noThrow={true}
  to="/"
/>
`;
